--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="vinkjeller.css">
     <title>Vinkjeller</title>
 </head>
 <body>
-<p>Velkommen til Vinkjeller</p>
+<header class="logo-container">
+    <div class="logo">
+        <div>vin</div>
+        <div>kjeller</div>
+    </div>
+</header>
 </body>
 </html>
