--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="vinkjeller.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;1,300&family=Open+Sans:wght@300&display=swap"
+          rel="stylesheet">
     <title>Vinkjeller</title>
 </head>
 <body>
@@ -15,5 +20,22 @@
         <div>kjeller</div>
     </div>
 </header>
+<main>
+    <p>Vinkjeller gjør det enkelere for deg å lagre og holde oversikt over vinen du eier!</p>
+    <p>Ønsker du å komme i kontakt med meg? Send meg en <a href="mailto:jeppe@jeppejernberg.com">epost</a>.</p>
+
+    <div class="app-stores">
+        <img src="assets/logo-apple-appstore.svg"
+             alt="triangle with all three sides equal"
+             height="50"
+             width="50"
+             class="icon"/>
+        <img src="assets/logo-google-playstore.svg"
+             alt="triangle with all three sides equal"
+             height="50"
+             width="50"
+             class="icon"/>
+    </div>
+</main>
 </body>
 </html>
