Oppdaterte terms til html

--- a/vinkjeller-terms.html
+++ b/vinkjeller-terms.html
@@ -2,57 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="vinkjeller.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;1,300&family=Open+Sans:wght@300&display=swap"
+          rel="stylesheet">
     <title>Vinkjeller Privacy Policy</title>
 </head>
 <body>
-<h1>Betingelser for bruk av Vinkjeller</h1>
-<p>Målet med Vinkjeller-tjenesten er å gjøre det enklere for deg å lagre og holde oversikt over vinen du eier. Disse
-    betingelsene gjelder for alle tjenester som inngår i Vinkjeller-applikasjonen. Ved å bruke tjenesten godtar du disse
-    vilkårene.</p>
+<main>
+    <h1>Betingelser for bruk av Vinkjeller</h1>
+    <p>Målet med Vinkjeller-tjenesten er å gjøre det enklere for deg å lagre og holde oversikt over vinen du eier. Disse
+        betingelsene gjelder for alle tjenester som inngår i Vinkjeller-applikasjonen. Ved å bruke tjenesten godtar du
+        disse
+        vilkårene.</p>
 
-<h2>Dine forpliktelser</h2>
-<p>Alle kan opprette en konto i Vinkjeller, gitt at vi ikke tidligere har deaktivert kontoen din for brudd på loven
-    eller noen av våre retningslinjer.</p>
+    <h2>Dine forpliktelser</h2>
+    <p>Alle kan opprette en konto i Vinkjeller, gitt at vi ikke tidligere har deaktivert kontoen din for brudd på loven
+        eller noen av våre retningslinjer.</p>
 
-<h2>Hvordan du ikke kan bruke Vinkjeller</h2>
-* Du kan ikke bruke Vinkjeller eller noen av de tilhørende tjenestene til å gjøre noe ulovlig, villedende eller
-uredelig, eller til et ulovlig eller uautorisert formål
-* Du kan ikke bryte (eller hjelpe eller oppfordre andre til å bryte) disse betingelsene eller våre retningslinjer
-* Du kan ikke forsøke å opprette kontoer på uautoriserte måter
-* Du kan ikke manuelt eller automatisk samle informasjon om produktene eller andre brukere av Vinkjeller
-* Du kan ikke selge, lisensiere eller kjøpe kontoer eller data innhentet fra oss eller tjenesten vår
-* Du kan ikke modifisere, transformere, lage derivater av eller omvendt konstruere produktene våre eller deres
-komponenter
+    <h2>Hvordan du ikke kan bruke Vinkjeller</h2>
+    <ul>
+        <li>Du kan ikke bruke Vinkjeller eller noen av de tilhørende tjenestene til å gjøre noe ulovlig, villedende
+            eller
+            uredelig, eller til et ulovlig eller uautorisert formål
+        </li>
+        <li>Du kan ikke bryte (eller hjelpe eller oppfordre andre til å bryte) disse betingelsene eller våre
+            retningslinjer
+        </li>
+        <li>Du kan ikke forsøke å opprette kontoer på uautoriserte måter</li>
+        <li>Du kan ikke manuelt eller automatisk samle informasjon om produktene eller andre brukere av Vinkjeller</li>
+        <li>Du kan ikke selge, lisensiere eller kjøpe kontoer eller data innhentet fra oss eller tjenesten vår</li>
+        <li>Du kan ikke modifisere, transformere, lage derivater av eller omvendt konstruere produktene våre eller deres
+            komponenter
+        </li>
+    </ul>
 
-<h2>Tillatelser du gir oss</h2>
-<p>Som en del av avtalen vår gir du oss også tillatelsene som vi trenger for å levere tjenesten. Du godtar at vi kan
-    laste ned og installere oppdateringer til tjenesten på enheten din. Du kan når som helst velge å slette kontoen din
-    dersom du ønsker det. Alt innhold du har lagret i tjenesten vil da bli slettet fra våre systemer.</p>
+    <h2>Tillatelser du gir oss</h2>
+    <p>Som en del av avtalen vår gir du oss også tillatelsene som vi trenger for å levere tjenesten. Du godtar at vi kan
+        laste ned og installere oppdateringer til tjenesten på enheten din. Du kan når som helst velge å slette kontoen
+        din
+        dersom du ønsker det. Alt innhold du har lagret i tjenesten vil da bli slettet fra våre systemer.</p>
 
-<h2>Fjerning av innhold og sletting av kontoen din</h2>
-<p>Vi kan fjerne innhold eller informasjon du lagrer på tjenesten hvis vi mener det bryter disse bruksbetingelsene eller
-    retningslinjene våre, eller hvis vi ifølge loven er pålagt å gjøre det. Vi kan umiddelbart nekte å levere eller
-    slutte å levere hele eller deler av tjenesten til deg.</p>
+    <h2>Fjerning av innhold og sletting av kontoen din</h2>
+    <p>Vi kan fjerne innhold eller informasjon du lagrer på tjenesten hvis vi mener det bryter disse bruksbetingelsene
+        eller
+        retningslinjene våre, eller hvis vi ifølge loven er pålagt å gjøre det. Vi kan umiddelbart nekte å levere eller
+        slutte å levere hele eller deler av tjenesten til deg.</p>
 
-<p>Vi forbeholder oss alle rettigheter vi ikke uttrykkelig har tildelt deg.</p>
+    <p>Vi forbeholder oss alle rettigheter vi ikke uttrykkelig har tildelt deg.</p>
 
-<h2>Endringer</h2>
-<p>Vi forbeholder oss retten til å endre disse opplysningene til enhver tid. Registrerte brukere vil få beskjed på
-    e-post i
-    forkant av alle eventuelle endringer.</p>
+    <h2>Endringer</h2>
+    <p>Vi forbeholder oss retten til å endre disse opplysningene til enhver tid. Registrerte brukere vil få beskjed på
+        e-post i
+        forkant av alle eventuelle endringer.</p>
 
-<h1>Personvernregler</h1>
-<p>Innholdet du lagrer i Vinkjeller vil ikke deles med tjedjeparter eller brukes til markedsføring. Du kan til enhver
-    tid
-    slette kontoen din og all informasjonen du har lagret i Vinkjeller. E-posten du oppgir ved registrering kan kun
-    brukes
-    til å sende ut nødvendig informasjon om endringer i tjenesten.</p>
+    <h1>Personvernregler</h1>
+    <p>Innholdet du lagrer i Vinkjeller vil ikke deles med tjedjeparter eller brukes til markedsføring. Du kan til
+        enhver
+        tid
+        slette kontoen din og all informasjonen du har lagret i Vinkjeller. E-posten du oppgir ved registrering kan kun
+        brukes
+        til å sende ut nødvendig informasjon om endringer i tjenesten.</p>
 
-<h2>Lagring av data</h2>
-* Vinkjeller lagrer alle data leverandøren som hoster databasen: Firebase
-* Vinkjeller bruker Google Analytics for statistikk og analyse
-* Vinkjeller bruker Google AdMob til å levere reklame i tjenesten
+    <h2>Lagring av data</h2>
+    * Vinkjeller lagrer alle data leverandøren som hoster databasen: Firebase
+    * Vinkjeller bruker Google Analytics for statistikk og analyse
+    * Vinkjeller bruker Google AdMob til å levere reklame i tjenesten
 
-Sist oppdatert: 10.06.2021
+    Sist oppdatert: 10.06.2021
+</main>
 </body>
 </html>
