--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
              height="50"
              width="50"
              class="icon"/>
-        <img src="assets/logo-google-playstore.svg"
-             alt="triangle with all three sides equal"
-             height="50"
-             width="50"
-             class="icon"/>
+        <a href="https://play.google.com/store/apps/details?id=app.vinkjeller.vinkjeller" target="_blank">
+            <img src="assets/logo-google-playstore.svg"
+                 alt="triangle with all three sides equal"
+                 height="50"
+                 width="50"
+                 class="icon"/>
+        </a>
     </div>
 </main>
 </body>
