La til lenke til app store

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <p>Ønsker du å komme i kontakt med meg? Send meg en <a href="mailto:jeppe@jeppejernberg.com">epost</a>.</p>
 
     <div class="app-stores">
-        <img src="assets/logo-apple-appstore.svg"
-             alt="triangle with all three sides equal"
-             height="50"
-             width="50"
-             class="icon"/>
+        <a href="https://apps.apple.com/app/id1604195733" target="_blank">
+            <img src="assets/logo-apple-appstore.svg"
+                 height="50"
+                 width="50"
+                 class="icon"/>
+        </a>
         <a href="https://play.google.com/store/apps/details?id=app.vinkjeller.vinkjeller" target="_blank">
             <img src="assets/logo-google-playstore.svg"
-                 alt="triangle with all three sides equal"
                  height="50"
                  width="50"
                  class="icon"/>
