--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
 <main>
     <p>Vinkjeller gjør det enkelere for deg å lagre og holde oversikt over vinen du eier!</p>
-    <p>Ønsker du å komme i kontakt med meg? Send meg en <a href="mailto:jeppe@jeppejernberg.com">epost</a>.</p>
+    <p>Ønsker du å komme i kontakt med meg? Send meg en <a href="mailto:jeppeer@gmail.com">epost</a>.</p>
 
     <div class="app-stores">
         <a href="https://apps.apple.com/app/id1604195733" target="_blank">
