La til seksjon for sletting av konto

--- a/vinkjeller-terms.html
+++ b/vinkjeller-terms.html
@@ -69,11 +69,27 @@
         til å sende ut nødvendig informasjon om endringer i tjenesten.</p>
 
     <h2>Lagring av data</h2>
-    * Vinkjeller lagrer alle data leverandøren som hoster databasen: Firebase
-    * Vinkjeller bruker Google Analytics for statistikk og analyse
-    * Vinkjeller bruker Google AdMob til å levere reklame i tjenesten
+    <ul>
+        <li>
+            Vinkjeller lagrer alle data leverandøren som hoster databasen: Firebase
+        </li>
+        <li>
+            Vinkjeller bruker Google Analytics for statistikk og analyse
+        </li>
+        <li>
+            Vinkjeller bruker Google AdMob til å levere reklame i tjenesten
+        </li>
+    </ul>
 
-    Sist oppdatert: 10.06.2021
+    <h3>Sletting av konto</h3>
+    <p>
+        Du kan slette kontoen din ved å åpne profilsiden inne i appen, og deretter trykke "Slett brukerkonto". Alle
+        opplysninger lagret om deg og din konto vil da bli slettet umiddelbart. Denne handlingen kan ikke angres.
+    </p>
+
+    <p>
+        Sist oppdatert: 05.01.2024
+    </p>
 </main>
 </body>
 </html>
